@@ -1,0 +1,5 @@
+try:
+  from pyibex_thickset import *
+except ImportError:
+  print("[pyibex_thickset] : module not found (need to be installed).")
+  print("It can be installed with conda install -c benensta pyibex_thickset")
