@@ -1,0 +1,5 @@
+try:
+  from pyibex_tube import *
+except ImportError:
+  print("[pyibex_tube] : module not found (need to be installed).")
+  print("It can be installed with conda install -c benensta pyibex_tube")
