@@ -20,6 +20,7 @@ setup(
   long_description='',
   # ext_modules=[Extension("pyibex.fake", sources=["fake.c"])],
   packages=['pyibex', 'pyibex.examples', 'pyibex.polar',
+            'pyibex.thickset', 'pyibex.tube',
             'pyibex.geometry', 'pyibex.tests'],
   package_data={
       'pyibex': ['pyibex${PYTHON_MODULE_EXTENSION}'],
